Introduce signal monitor tool
This tool provides an interactive of QObject signals. It's still work in
progress, some major features still need to be implemented:

  - display of time marks in the event view
  - print signal names as tooltips and in the graph if sufficient space
    is available
  - interactive range selection
  - timestamp rubberband
  - ...

SignalHistoryModel::Item also might need cleanup.

--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -60,6 +60,8 @@ set(gammaray_srcs
   tools/resourcebrowser/resourcebrowser.cpp
   tools/resourcebrowser/resourcefiltermodel.cpp
   tools/selectionmodelinspector/selectionmodelinspector.cpp
+  tools/signalmonitor/signalhistorymodel.cpp
+  tools/signalmonitor/signalmonitor.cpp
   tools/textdocumentinspector/textdocumentinspector.cpp
 
   remote/server.cpp
